@@ -28,6 +28,8 @@ import org.operaton.bpm.engine.variable.Variables;
 
 import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.Response.Status;
+
+import java.io.Serial;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -39,7 +41,7 @@ import java.util.Map.Entry;
 public abstract class AbstractRestQueryParametersDto<T> extends QueryParameters {
   protected static final String DEFAULT_ORDER = "RES.ID_ asc";
 
-  private static final long serialVersionUID = 1L;
+  @Serial private static final long serialVersionUID = 1L;
 
   protected static final String SORT_ORDER_ASC_VALUE = "asc";
   protected static final String SORT_ORDER_DESC_VALUE = "desc";
@@ -102,7 +104,7 @@ public abstract class AbstractRestQueryParametersDto<T> extends QueryParameters 
       if (sortOrder == null || sortOrder.isEmpty()) {
         sortOrder = SORT_ORDER_ASC_VALUE;
       }
-      return String.format("%s %s", getOrderByValue(sortBy), sortOrder);
+      return "%s %s".formatted(getOrderByValue(sortBy), sortOrder);
     }
     return DEFAULT_ORDER;
   }
